# AIReviewBot

./: .gitignore  README.md  pyproject.toml  walkthrough.md  walkthrough.md.resolved
backend/app/: config.py  main.py
backend/app/db/: database.py  models.py
backend/app/models/: schemas.py
backend/app/routes/: analyzer_controller.py  job_controller.py
backend/app/services/: analyzer_service.py  cache_service.py  chunking_service.py  job_service.py  parser_service.py
backend/app/utils/: file_utils.py
backend/app/workers/: celery_app.py  tasks.py
scratch/: debug_capsule.py  debug_langs.py  debug_new_api.py  debug_query_api.py  debug_ts.py
tests/: test_api.py
tests/sample_project/: app.js  utils.py
