[tool.poetry]
name = "aireviewbot"
version = "0.1.0"
description = "AI-based Codebase Review System (MVP)"
authors = ["Falak <falak@example.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
python-multipart = "^0.0.9"
pydantic = "^2.6.1"
tree-sitter = "^0.25.2"
tree-sitter-python = "^0.21.0"
tree-sitter-javascript = "^0.21.0"
groq = "^0.18.0"
tree-sitter-typescript = "^0.23.2"
tree-sitter-java = "^0.23.5"
tree-sitter-c = "^0.24.2"
tree-sitter-cpp = "^0.23.4"
pydantic-settings = "^2.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
